samples/_failures_safe/1761288930_48bcaf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6d3a9227.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_6d3a9227.c:184:24: error: expected declaration or statement at end of input
  184 |                 struct GraphNode* neighbor = graph->edges[i]->target;
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_6d3a9227.c:184:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d3a9227.c:184:24: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6d3a9227.c:184:24: error: expected declaration or statement at end of input
